# Hotel-Reservation

./: .gitignore  mlflow.db  pyproject.toml  requirements.txt  setup.py  test_exc.py
artifacts/models/: lgbm_model.pkl
config/: config.yaml  model_params.py  paths_config.py
mlruns/0/bc62225968704db18253e4d9a9ad0d90/artifacts/datasets/: processed_test.csv
notebook/: EDA.ipynb
pipeline/: training_pipeline.py
src/: custom_exception.py  data_ingestion.py  data_preprocessing.py  logger.py  model_training.py
utils/: common_functions.py
