[project]
name = "hotel-reservation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <3.14"
dependencies = [
    "google-cloud-storage>=3.8.0",
    "imbalanced-learn>=0.14.1",
    "ipykernel>=7.1.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "mlflow>2.22.1",
    "numpy>=2.4.1",
    "pandas<3.0.0",
    "protobuf<=3.20.1",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "setuptools>=82.0.0",
    "statsmodels>=0.14.6",
    "xgboost>=3.1.3",
]
